--- a/index.html
+++ b/index.html
@@ -395,6 +395,27 @@
             </li>
           </ul>
         </div>
+
+        <div class="footer-sub-container">
+          <p class="footer-subscribe">Subscribe</p>
+          <form class="footer-email">
+            <label for="email" class="footer-lb">
+              <input
+                type="email"
+                name="E-mail"
+                placeholder="E-mail"
+                required
+                class="footer-input"
+              />
+            </label>
+            <button type="submit" class="bt-subscribe">
+              Subscribe
+              <svg class="send-icon" width="24" height="20">
+                <use href="./images/icons.svg#icon-send"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
       </div>
     </footer>
     <div class="backdrop is-hidden" data-modal>
@@ -404,6 +425,64 @@
             <use href="./images/icons.svg#icon-vector"></use>
           </svg>
         </button>
+        <p class="modal-name">Leave your contacts and we will call you back</p>
+        <form class="modal-form">
+          <div class="modal-field">
+            <label for="user-name" class="input-label">Name</label>
+            <div class="input-wrap">
+              <input type="name" name="user-name" id="user-name" required class="modal-input" />
+              <svg class="modal-icon" width="18" height="18">
+                <use href="./images/icons.svg#icon-person"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="modal-field">
+            <label for="user-tell" class="input-label">Phone</label>
+            <div class="input-wrap">
+              <input type="tell" name="user-tell" id="user-tell" required class="modal-input" />
+              <svg class="modal-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-phone"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="modal-field">
+            <label for="user-email" class="input-label">Email</label>
+            <div class="input-wrap">
+              <input type="email" name="user-email" id="user-email" required class="modal-input" />
+              <svg class="modal-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-email"></use>
+              </svg>
+            </div>
+            <div class="modal-field">
+              <label for="user-text" class="input-label">Comment</label>
+              <textarea
+                name="user-text"
+                id="user-text"
+                placeholder="Text input"
+                class="modal-comment"
+              ></textarea>
+            </div>
+            <div class="modal-field">
+              <input
+                type="checkbox"
+                id="privacy"
+                name="privacy"
+                value="true"
+                required
+                class="modal-check visually-hidden"
+              />
+              <label for="privacy" class="check-text"
+                ><span class="title-check"
+                  ><svg class="modal-icon-check" width="10" height="8">
+                    <use href="./images/icons.svg#icon-aggry"></use></svg></span
+                >I accept the terms and conditions of the
+                <a href="./" class="title-privacy">Privacy Policy</a>
+              </label>
+            </div>
+          </div>
+
+          <button type="submit" class="send">Send</button>
+        </form>
       </div>
     </div>
     <script src="./js/modal.js"></script>
