--- a/portfolio.html
+++ b/portfolio.html
@@ -289,6 +289,20 @@
             </li>
           </ul>
         </div>
+        <div class="footer-sub-container">
+          <p class="footer-subscribe">Subscribe</p>
+          <form class="footer-email">
+            <label for="email" class="footer-lb">
+              <input type="email" name="E-mail" placeholder="E-mail" class="footer-input" />
+            </label>
+            <button type="submit" class="bt-subscribe">
+              Subscribe
+              <svg class="send-icon" width="24" height="20">
+                <use href="./images/icons.svg#icon-send"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
       </div>
     </footer>
   </body>
