--- a/index.html
+++ b/index.html
@@ -402,7 +402,8 @@
             <label for="email" class="footer-lb">
               <input
                 type="email"
-                name="E-mail"
+                name="emailf"
+                id="email"
                 placeholder="E-mail"
                 required
                 class="footer-input"
@@ -430,7 +431,7 @@
           <div class="modal-field">
             <label for="user-name" class="input-label">Name</label>
             <div class="input-wrap">
-              <input type="name" name="user-name" id="user-name" required class="modal-input" />
+              <input type="text" name="user-name" id="user-name" class="modal-input" />
               <svg class="modal-icon" width="18" height="18">
                 <use href="./images/icons.svg#icon-person"></use>
               </svg>
@@ -439,7 +440,7 @@
           <div class="modal-field">
             <label for="user-tell" class="input-label">Phone</label>
             <div class="input-wrap">
-              <input type="tell" name="user-tell" id="user-tell" required class="modal-input" />
+              <input type="text" name="user-tell" id="user-tell" class="modal-input" />
               <svg class="modal-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-phone"></use>
               </svg>
@@ -452,6 +453,7 @@
               <svg class="modal-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-email"></use>
               </svg>
+            </div>
             </div>
             <div class="modal-field">
               <label for="user-text" class="input-label">Comment</label>
