--- a/index.html
+++ b/index.html
@@ -455,7 +455,7 @@
               </svg>
             </div>
             </div>
-            <div class="modal-field">
+            <div class="modal-coment">
               <label for="user-text" class="input-label">Comment</label>
               <textarea
                 name="user-text"
@@ -464,7 +464,7 @@
                 class="modal-comment"
               ></textarea>
             </div>
-            <div class="modal-field">
+            <div class="modal-check-box">
               <input
                 type="checkbox"
                 id="privacy"
@@ -480,10 +480,10 @@
                 >I accept the terms and conditions of the
                 <a href="./" class="title-privacy">Privacy Policy</a>
               </label>
-            </div>
+            </div> 
+            <button type="submit" class="send">Send</button>
           </div>
-
-          <button type="submit" class="send">Send</button>
+         
         </form>
       </div>
     </div>
