--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@
             <label for="user-name" class="input-label">Name</label>
             <div class="input-wrap">
               <input type="text" name="user-name" id="user-name" class="modal-input" />
-              <svg class="modal-icon" width="18" height="18">
+              <svg class="modal-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-person"></use>
               </svg>
             </div>
@@ -454,36 +454,34 @@
                 <use href="./images/icons.svg#icon-email"></use>
               </svg>
             </div>
-            </div>
-            <div class="modal-coment">
-              <label for="user-text" class="input-label">Comment</label>
-              <textarea
-                name="user-text"
-                id="user-text"
-                placeholder="Text input"
-                class="modal-comment"
-              ></textarea>
-            </div>
-            <div class="modal-check-box">
-              <input
-                type="checkbox"
-                id="privacy"
-                name="privacy"
-                value="true"
-                required
-                class="modal-check visually-hidden"
-              />
-              <label for="privacy" class="check-text"
-                ><span class="title-check"
-                  ><svg class="modal-icon-check" width="10" height="8">
-                    <use href="./images/icons.svg#icon-aggry"></use></svg></span
-                >I accept the terms and conditions of the 
-                <a href="./" class="title-privacy">Privacy Policy</a>
-              </label>
-            </div> 
-            <button type="submit" class="send">Send</button>
           </div>
-         
+          <div class="modal-coment">
+            <label for="user-comment" class="input-label">Comment</label>
+            <textarea
+              name="user-text"
+              id="user-comment"
+              placeholder="Text input"
+              class="modal-comment"
+            ></textarea>
+          </div>
+          <div class="modal-check-box">
+            <input
+              type="checkbox"
+              id="user-privacy"
+              name="privacy"
+              value="true"
+              required
+              class="modal-check visually-hidden"
+            />
+            <label for="user-privacy" class="check-text"
+              ><span class="title-check"
+                ><svg class="modal-icon-check" width="10" height="8">
+                  <use href="./images/icons.svg#icon-aggry"></use></svg></span
+              >I accept the terms and conditions of the
+              <a href="./" class="title-privacy">Privacy Policy</a>
+            </label>
+          </div>
+          <button type="submit" class="send">Send</button>
         </form>
       </div>
     </div>
