chenge displa to inline

--- a/index.html
+++ b/index.html
@@ -458,7 +458,7 @@
           <div class="modal-coment">
             <label for="user-comment" class="input-label">Comment</label>
             <textarea
-              name="user-text"
+              name="user-comment"
               id="user-comment"
               placeholder="Text input"
               class="modal-comment"
@@ -468,7 +468,7 @@
             <input
               type="checkbox"
               id="user-privacy"
-              name="privacy"
+              name="user-privacy"
               value="true"
               required
               class="modal-check visually-hidden"
